--- a/Display/TransportList.xaml
+++ b/Display/TransportList.xaml
@@ -49,7 +49,7 @@
                             </DataTemplate>
                         </DataGridTemplateColumn.CellTemplate>
                     </DataGridTemplateColumn>
-                    <DataGridTemplateColumn Header="数量" Width="150">
+                    <DataGridTemplateColumn Header="重量" Width="150">
                         <DataGridTemplateColumn.CellTemplate>
                             <DataTemplate>
                                 <TextBlock Text="{Binding 数量}" HorizontalAlignment="Right"/>
