--- a/Display/ResourceDictionary.xaml
+++ b/Display/ResourceDictionary.xaml
@@ -327,6 +327,7 @@
         <Setter Property="FocusVisualStyle" Value="{x:Null}"/>
         <Setter Property="Padding" Value="10,5,10,5"/>
         <Setter Property="FontSize" Value="28"/>
+        <Setter Property="Margin" Value="0,5,0,0"/>
     </Style>
     <Style TargetType="DataGridRow" BasedOn="{StaticResource {x:Type DataGridRow}}">
         <Setter Property="IsTabStop" Value="False"/>
