--- a/Display/ManufactureInfo.xaml
+++ b/Display/ManufactureInfo.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Display.ManufactureInfo"
+﻿<UserControl x:Class="Display.ManufactureInfo"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,8 +7,7 @@
       xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
       xmlns:local="clr-namespace:Display" d:DataContext="{d:DesignInstance Type=local:ViewModelManufactureInfo}"
       mc:Ignorable="d" d:DesignWidth="1160" d:DesignHeight="680" 
-      FontSize="35" FontFamily="Meiryo UI"
-      Title="製造実績">
+      FontSize="35" FontFamily="Meiryo UI">
     <!-- イベント -->
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Loaded">
@@ -212,4 +211,4 @@
             </Grid>
         </StackPanel>
     </Grid>
-</Page>
+</UserControl>
