--- a/Display/Setting.xaml
+++ b/Display/Setting.xaml
@@ -1,4 +1,4 @@
-﻿<Page x:Class="Display.Setting"
+﻿<UserControl x:Class="Display.Setting"
       xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
       xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,8 +7,7 @@
       xmlns:i="http://schemas.microsoft.com/xaml/behaviors"
       xmlns:local="clr-namespace:Display" d:DataContext="{d:DesignInstance Type=local:ViewModelSetting}"
       mc:Ignorable="d" d:DesignWidth="1160" d:DesignHeight="680" 
-      FontSize="35" FontFamily="Meiryo UI"
-      Title="設定画面">
+      FontSize="35" FontFamily="Meiryo UI">
     <!-- イベント -->
     <i:Interaction.Triggers>
         <i:EventTrigger EventName="Loaded">
@@ -168,4 +167,4 @@
             </Grid>
         </StackPanel>
     </Grid>
-</Page>
+</UserControl>
