--- a/Display/WindowMain.xaml
+++ b/Display/WindowMain.xaml
@@ -161,7 +161,7 @@
                 </Grid>
                 <!-- メイン画面 -->
                 <Grid>
-                    <Frame x:Name="FramePage" Background="#FFFFFF" NavigationUIVisibility="Hidden" IsTabStop="False" Focusable="False" RenderTransformOrigin="0.5,0.5" Height="650" Margin="0,10,0,0"/>
+                    <Frame Content="{Binding FramePage}" Background="#FFFFFF" NavigationUIVisibility="Hidden" IsTabStop="False" Focusable="False" RenderTransformOrigin="0.5,0.5" Height="650" Margin="0,10,0,0"/>
                 </Grid>
             </StackPanel>
         </Grid>
